crates/ty_server/tests/e2e/snapshots/e2e__provide_type__provide_nested_class_type.snap
---
source: crates/ty_server/tests/e2e/provide_type.rs
assertion_line: 67
expression: provide_type_response
---
ProvideTypeResponse {
    ty: "A.B",
}
