crates/ty_server/tests/e2e/snapshots/e2e__provide_type__provide_str_type.snap
---
source: crates/ty_server/tests/e2e/provide_type.rs
assertion_line: 33
expression: provide_type_response
---
Some(
    ProvideTypeResponse {
        ty: "C",
    },
)
